--- a/Spark/index.html
+++ b/Spark/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Custom Website</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	
+	<div class="wrapper">
+			<nav class="navbar">
+				<ul>
+					<li><a class="active" href="#">Home</a></li>
+					<li><a href="https://rzp.io/l/kxmMfoSCfw">Donate</a></li>
+					<li><a href="contactus.html">Contact</a></li>
+				</ul>
+			</nav>
+			<div class="center">
+			<h3>BE THE REASON SOMEONE SMILES TODAY </h3>
+			<div class="buttons">
+			<form action='https://rzp.io/l/kxmMfoSCfw'>
+			<button type="submit">Donate Us</button>
+		</form> 
+		</div>
+		</div>
+</body>
+</html>
